# rain.math.float

./: .gas-snapshot  .gitignore  .gitmodules  .prettierignore  .soldeerignore  CLAUDE.md  Cargo.toml  README.md  REUSE.toml  flake.nix  foundry.toml  foundry.toml.bak  package-lock.json  package.json  remappings.txt  slither.config.json  tsconfig.json
.github/workflows/: cargo-publish.yaml  copy-artifacts.yaml  git-clean.yaml  manual-sol-artifacts.yaml  npm-package-release.yaml  package-release.yaml  rainix-rs-static.yaml  rainix-rs-test.yaml  rainix-rs-wasm.yaml  rainix.yaml
audit/2026-03-10-01/: triage.md
audit/2026-03-10-01/pass0/: process.md
audit/2026-03-10-01/pass1/: DecimalFloat.md  LibDecimalFloat.md  LibDecimalFloatDeploy.md  LibDecimalFloatImplementation.md  LibFormatDecimalFloat.md  LibLogTable.md  LibParseDecimalFloat.md  LogTablesPointers.md  errors.md  scripts.md
audit/2026-03-10-01/pass2/: DecimalFloat.md  LibDecimalFloat.md  LibDecimalFloatImplementation.md  LibFormatDecimalFloat.md  errors_gen_deploy.md  parse_and_tables.md
audit/2026-03-10-01/pass3/: DecimalFloat.md  LibDecimalFloat.md  impl_format_parse.md  misc.md
audit/2026-03-10-01/pass4/: LibDecimalFloat.md  concrete_errors_deploy.md  impl_format_parse_table.md
audit/2026-03-10-01/pass5/: LibDecimalFloat.md  LibDecimalFloatImplementation.md  concrete_errors_deploy.md  format_parse_table.md
audit/2026-03-23-01/: triage.md
crates/float/: Cargo.toml
crates/float-wasm/: Cargo.toml
crates/float-wasm/src/: lib.rs
crates/float/abi/: DecimalFloat.json  TestDecimalFloat.json
crates/float/proptest-regressions/: fuzz_ops.txt  lib.txt
crates/float/src/: error.rs  evm.rs  fuzz_ops.rs  js_api.rs  lib.rs  tables.rs
script/: BuildPointers.sol  CopyArtifacts.sol  Deploy.sol  check-published-deploy-constants.sh
script/lib/: LibCopyArtifacts.sol  LibEtchLogTables.sol
scripts/: build.js
src/: DecimalFloat.sol  DecimalFloatExp.sol  LibDecimalFloat.sol  LibLogTable.sol  LogTable.sol
src/concrete/: DecimalFloat.sol
src/error/: ErrDecimalFloat.sol  ErrFormat.sol  ErrParse.sol
src/experimental/: DecimalFloatExp.sol
src/lib/: LibDecimalFloat.sol  LibDecimalFloatDeploy.sol
src/lib/deploy/: LibDecimalFloatDeploy.sol
src/lib/format/: LibFormatDecimalFloat.sol
src/lib/implementation/: LibDecimalFloatImplementation.sol
src/lib/parse/: LibParseDecimalFloat.sol
src/lib/table/: LibLogTable.sol
src/table/: LibLogTable.sol
test/: DecimalFloat.add.t.sol  DecimalFloat.compare.t.sol  DecimalFloat.decimal.t.sol  DecimalFloat.divide.t.sol  DecimalFloat.exp2.t.sol  DecimalFloat.log10.t.sol  DecimalFloat.maximize.t.sol  DecimalFloat.minimize.t.sol  DecimalFloat.mixed.t.sol  DecimalFloat.multiply.t.sol  DecimalFloat.parts.t.sol  DecimalFloat.power.t.sol  DecimalFloat.power10.t.sol  LibDecimalFloat.compare.t.sol  LibDecimalFloat.decimal.t.sol  LibDecimalFloat.divide.t.sol  LibDecimalFloat.exp2.t.sol  LibDecimalFloat.minimize.t.sol  LibDecimalFloat.mixed.t.sol  LibDecimalFloat.multiply.t.sol  LibDecimalFloat.parts.t.sol  LibDecimalFloat.power10.t.sol  LogTable.bytes.t.sol
test/abstract/: LogTest.sol
test/concrete/: DecimalFloat.packLossless.t.sol  TestDecimalFloat.sol  TestDecimalFloat.unpack.t.sol
test/lib/: LibCommonResults.sol  LibDecimalFloatSlow.sol
test/lib/implementation/: LibDecimalFloatImplementationSlow.sol
test/script/: CopyArtifacts.t.sol
test/src/: LibDecimalFloat.add.t.sol  LibDecimalFloat.compare.t.sol  LibDecimalFloat.decimal.t.sol  LibDecimalFloat.divide.t.sol  LibDecimalFloat.eq.t.sol  LibDecimalFloat.frac.t.sol  LibDecimalFloat.gt.t.sol  LibDecimalFloat.inv.t.sol  LibDecimalFloat.log10.t.sol  LibDecimalFloat.lt.t.sol  LibDecimalFloat.maximize.t.sol  LibDecimalFloat.minus.t.sol  LibDecimalFloat.mixed.t.sol  LibDecimalFloat.multiply.t.sol  LibDecimalFloat.pack.t.sol  LibDecimalFloat.power.t.sol  LibDecimalFloat.power10.t.sol  LibDecimalFloat.sub.t.sol
test/src/concrete/: DecimalFloat.abs.t.sol  DecimalFloat.add.t.sol  DecimalFloat.canonicalize.t.sol  DecimalFloat.ceil.t.sol  DecimalFloat.constants.t.sol  DecimalFloat.constructor.t.sol  DecimalFloat.div.t.sol  DecimalFloat.eq.t.sol  DecimalFloat.floor.t.sol  DecimalFloat.format.t.sol  DecimalFloat.frac.t.sol  DecimalFloat.fromFixedDecimalLossless.t.sol  DecimalFloat.fromFixedDecimalLossy.t.sol  DecimalFloat.gt.t.sol  DecimalFloat.gte.t.sol  DecimalFloat.integer.t.sol  DecimalFloat.inv.t.sol  DecimalFloat.isZero.t.sol  DecimalFloat.log10.t.sol  DecimalFloat.lt.t.sol  DecimalFloat.lte.t.sol  DecimalFloat.max.t.sol  DecimalFloat.min.t.sol  DecimalFloat.minus.t.sol  DecimalFloat.mul.t.sol  DecimalFloat.packLossless.t.sol  DecimalFloat.parse.t.sol  DecimalFloat.pow.t.sol  DecimalFloat.pow10.t.sol  DecimalFloat.sqrt.t.sol  DecimalFloat.sub.t.sol  DecimalFloat.toFixedDecimalLossless.t.sol  DecimalFloat.toFixedDecimalLossy.t.sol  DecimalFloat.unpack.t.sol  TestUtilsLib.sol
test/src/implementation/: LibDecimalFloatImplementation.normalize.t.sol  LibDecimalFloatImplementation.withTargetExponent.t.sol
test/src/lib/: LibDecimalFloat.abs.t.sol  LibDecimalFloat.add.t.sol  LibDecimalFloat.canonicalize.t.sol  (+35 more)
test_js/: float.test.ts  tsconfig.json
(+30 files in other folders)
