[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "CAL-1.0"
homepage = "https://github.com/rainprotocol/rain.math.float"

[workspace.dependencies]
alloy = { version = "1.0.9", features = ["sol-types", "json-rpc"] }
revm = { version = "25.0.0", default-features = false, features = [
    "portable",
    "std",
    "tracer",
] }
thiserror = "2.0.12"
proptest = "1.7.0"
once_cell = "1.21.3"
