[package]
name = "rain-math-float"
version = "0.1.0"
edition = "2021"
license = "LicenseRef-DCL-1.0"
homepage = "https://github.com/rainlanguage/rain.math.float"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
alloy = { version = "1.0.9", features = ["sol-types", "json-rpc"] }
thiserror = "2.0.12"
serde = "1.0.219"
wasm-bindgen-utils = { git = "https://github.com/rainlanguage/rain.wasm", rev = "06990d85a0b7c55378a1c8cca4dd9e2bc34a596a" }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
revm = { version = "25.0.0", default-features = false, features = [
    "c-kzg",
    "portable",
    "std",
    "tracer",
] }

[target.'cfg(target_family = "wasm")'.dependencies]
revm = { version = "25.0.0", default-features = false, features = [
    "kzg-rs",
    "portable",
    "std",
    "tracer",
] }
getrandom = { version = "0.2.11", features = ["js", "js-sys"] }

[dev-dependencies]
alloy = { version = "1.0.9", features = ["sol-types", "json-rpc", "arbitrary"] }
anyhow = "1.0.98"
proptest = "1.7.0"
serde_json = "1.0.140"
